kubernetes/angular-front-end/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: angular-front-end-service
spec:
  type: ClusterIP
  selector:
    app: factory-simulator-front-end
  ports:
    - protocol: TCP
      port: 4200
