kubernetes/angular-front-end/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: factory-simulator.com
          http:
            paths:
                - path: /(api|static)/?(.*)
                  backend:
                    serviceName: django-backend-service
                    servicePort: 8000
                - path: /?(.*)
                  backend:
                    serviceName: angular-front-end-service
                    servicePort: 4200
